# dspace-client

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
dspace/: __init__.py  dspace_client.py  dspace_objects.py  exceptions.py  oidc.py
