[tool.poetry]
name = "dspace-client"
version = "0.3.0"
license = "MIT"
description = "DSpace Rest Client for Python"
authors = ["Vítor <vitor.silverio.rodrigues@gmail.com>"]
readme = "README.md"
packages = [{include = "dspace"}]
repository = "https://github.com/vitorsilverio/dspace-client"
keywords = ["dspace", "rest"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
pydantic = "^2.0.2"
pyjwt = "^2.6.0"
rich = "^13.5.2"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
